--- a/components/nav.module.css
+++ b/components/nav.module.css
@@ -111,9 +111,11 @@
 }
 
 .a{
-    padding: 10px 35px;
+    padding: 0.625em 2.1875em;
     background-color: var(--blanco);
     font-weight: 500;
+    display: flex;
+    align-items: center;
     transition: all 300ms ease;
 }
 
@@ -130,6 +132,19 @@
 .enlacesM .registro:hover{
     color: var(--blanco);
     background-color: var(--celeste);
+}
+
+.icon1{
+    width: 1.6875em;
+    margin-right: .5em;
+}
+
+.footer{
+    border-top: solid 1px var(--celeste);
+    margin-top: 1em;
+    padding-top: 1em;
+    margin-right: 2.1875em;
+    margin-left: 2.1875em;
 }
 
 .menuAct .burger:first-child{
