--- a/components/usuarios.module.css
+++ b/components/usuarios.module.css
@@ -1,8 +1,10 @@
 .container{
-    padding: 1.25em 1.56em;
+    /* padding: 1.25em 1.56em; */
+    padding: 1.25em 1em;
     background-color: var(--fondo);
     border-radius: 1em;
-    margin: calc(.25em / 2) 1.56em;
+    /* margin: calc(.25em / 2) 1.56em; */
+    margin: calc(.25em / 2) 1em;
 }
 
 .title{
