--- a/components/welcome.module.css
+++ b/components/welcome.module.css
@@ -7,9 +7,10 @@
     color: var(--celeste);
     font-size: 1.5em;
     text-align: center;
+    margin: 1em;
 }
 
 .desc{
     text-align: center;
-    margin-top: 0.9em;
+    margin: 1em;
 }
